--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-traverse": "^6.26.0",
-    "babylon": "^6.18.0"
+    "babylon": "^6.18.0",
+    "js-beautify": "^1.8.8"
   }
 }
